Chenged color and font of all lables throughout the application

--- a/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
+++ b/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
@@ -72,7 +72,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 form-group">
                                         <label>{{"Assignee" | localize}}</label>
                                         <app-user-list-component comingChangeReguest = "" userId = {{selectedUserID}} ></app-user-list-component>
                                     </div>
