--- a/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.html
@@ -69,7 +69,7 @@
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="drag_drop_box">
+                                <div class="drag_drop_box form-group">
                                     <label class="bg-color">{{"Attachments" | localize}}</label>
                                     <ng-uppy [config]="settings" (uploadResult)="fileUploadedResponse($event)"></ng-uppy>
                                     <div *ngFor="let item of attachments" class="attachments_section">
