--- a/angular/src/app/main/reconcilliation/itemized/itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized.component.html
@@ -19,10 +19,10 @@
                                     <h3 class="mr-3 mb-0">
                                         <span>{{"Itemized List" | localize}}</span>
                                     </h3>
-                                    <h6 class="ml-3 mb-0">
-                                        {{"Account No" | localize}}
+                                    <h6 class="ml-3 mb-0 form-group">
+                                        <label>{{"Account No" | localize}}</label>
                                         <span class="bg-lightgrey badge badge-secondary bagesTextColor">{{accountNo}}</span>
-                                        {{"Account Name" | localize}}
+                                        <label>{{"Account Name" | localize}}</label>
                                         <span class="bg-lightgrey badge badge-secondary bagesTextColor">{{accountName}}</span>
                                     </h6>
 
@@ -32,13 +32,14 @@
                                 </div>
                                 <div class="kt-subheader__toolbar">
                                     <div class="kt-subheader__wrapper">
-                                        <button [ngClass]="{'disabled':!monthStatus}" class="btn btn-brand" (click)="RedirectToAddNew()"><i
-                                            class="fa fa-plus"></i>
-                                        {{"AddNew" | localize}}</button>
                                         <a class="mr-3" href="javascript: void(0);" (click)="BackToReconcileList()">
                                             <i class="la la-arrow-left"></i>
                                             {{"Back" | localize}}
                                         </a>
+                                        <button [ngClass]="{'disabled':!monthStatus}" class="btn btn-brand" (click)="RedirectToAddNew()"><i
+                                            class="fa fa-plus"></i>
+                                        {{"AddNew" | localize}}</button>
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -114,7 +115,7 @@
                                         <span class="">
                                             <div class="d-flex">
                                                 <div *ngIf="item.attachments?.length > 0" class="drag_drop_box">
-                                                    <div class="drag_drop_box">
+                                                    <div class="drag_drop_box form-group">
                                                         <div class="attachments_section">
                                                             <a  href="{{item.attachments[0].attachmentUrl}}" target="_blank"
                                                                 download="{{item.attachments[0].attachmentUrl}}" class="attachement_btn">
@@ -139,7 +140,7 @@
                                                         </span> 
                                                     </div>        
                                             <div *ngIf="item.attachments?.length == 0" class="col-md-12">
-                                                <div  class="drag_drop_box">
+                                                <div  class="drag_drop_box form-group">
                                                      <div  class="attachments_section_none">
                                                         <a  *ngIf="item.attachments?.length == 0"class="attachement_btn">
                                                             <span>{{"No Attachments" | localize}}</span>
@@ -192,7 +193,7 @@
                                                                 </span> 
                                                             </div>        
                                                     <div *ngIf="item.attachments?.length == 0" class="col-md-12">
-                                                        <div  class="drag_drop_box">
+                                                        <div  class="drag_drop_box form-group">
                                                              <div  class="attachments_section_none">
                                                                 <a  *ngIf="item.attachments?.length == 0"class="attachement_btn">
                                                                     <span>{{"No Attachments" | localize}}</span>
@@ -227,7 +228,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="row">                              
-                                <div class="col-md-12">
+                                <div class="col-md-12 form-group">
                                     <div [ngClass]="{'disabled':!monthStatus}" class="form-group giveCommentView" *ngIf="commantBox">
                                         <label>{{"Comments" | localize}}</label>
                                         <div (click)="commentClick()">
@@ -373,7 +374,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="report-container">
+                            <div class="report-container form-group">
                                 <table>
                                     <thead>
                                         <tr>
@@ -385,15 +386,15 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td class="text-black big">{{"Total" | localize}}:</td>
+                                            <td class="text-black big"><label>{{"Total" | localize}}:</label></td>
                                             <td class="text-black big"> {{TotalAmount| formater }}</td>
                                         </tr>
                                         <tr>
-                                            <td class="text-black big">{{"Trial Balance" | localize}}:</td>
+                                            <td class="text-black big"><label>{{"Trial Balance" | localize}}:</label></td>
                                             <td class="text-black big"  >{{trialBalance | formater}}</td>
                                         </tr>
                                         <tr>
-                                            <td class="text-black big">{{"Variance" | localize}}:</td>
+                                            <td class="text-black big"><label>{{"Variance" | localize}}:</label></td>
                                             <td class="text-black big" > {{variance | formater}}</td>
                                         </tr>
                                     </tbody>
