UI Changes and calidations changes in Sign Up

--- a/angular/src/account/register/register.component.html
+++ b/angular/src/account/register/register.component.html
@@ -98,7 +98,7 @@
                                                         Email is required.
                                                     </div>
                                                     <div class="text-danger" *ngIf="emailAddress.errors.pattern">
-                                                        Email Formate Is Wrong.
+                                                        Email format is wrong.
                                                     </div>
                                                 </div>
                                             </div>
@@ -138,7 +138,7 @@
                                 <form [formGroup]="businessInfoForm" class="kt-wizard-v1__form">
                                     
                                     <div class="row pb-1">
-                                        <div class="col-xl-6">
+                                        <div class="col-xl-12">
                                             <div class="form-group">
                                                 <label>Business Name</label>
                                                 <input formControlName="businessName" type="text" class="form-control" autocomplete="off" name="businessNameOfUser" placeholder="Enter Business Name" value="" required maxlength="64">
@@ -149,6 +149,8 @@
                                                 </div>
                                             </div>
                                         </div>
+                                    </div>
+                                    <div class="row pb-4">
                                         <div class="col-xl-6">
                                             <label><span class="text-dark">Tenant Name</span></label>
                                             
@@ -164,11 +166,9 @@
                                                 </div>
                                             </div>
                                             <div class="text-danger" *ngIf="isTenantExist">
-                                                Tenant Name already Exist.
+                                                Tenant Name already exists.
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="row pb-4">
                                         <div class="col-xl-6">
                                             <label><span class="text-dark">Website</span> (Optional)</label>
                                             <div class="input-group">
@@ -178,23 +178,9 @@
                                                 </div>   
                                             </div>
                                         </div>
-                                        <div class="col-xl-6">
-                                            <label><span class="text-dark">Phone Number</span>(Optional)</label>
-                                            <div class="input-group">
-                                                <div class="input-group-append">
-                                                    <span class="input-group-text"><i class="fas fa-phone-volume"></i></span>
-                                                  </div>
-                                                <input type="text" formControlName="phone" class="form-control" autocomplete="off" placeholder="Enter Phone Number" name="phoneNumberOfUser"maxlength="64">
-                                            </div>
-                                            <div *ngIf="phone.invalid && (phone.dirty || phone.touched)">
-                                                <div class="text-danger" *ngIf="phone.errors.pattern">
-                                                    Incorrect format for Phone Number.
-                                                </div>
-                                            </div>
-                                        </div>
                                     </div>  
                                     <div class="row">
-                                        <div class="col-xl-6">
+                                        <div class="col-xl-12">
                                             <div class="form-group">
                                                 <label>Address Line 1</label>
                                                 <input type="text" formControlName="addressLineOne"class="form-control" name="addressLineOneOfUser" autocomplete="off" placeholder="Enter Address" value="" required maxlength="256">
@@ -211,34 +197,51 @@
                                                 <input type="text" formControlName="addressLineTwo"class="form-control" autocomplete="off" name="addressLineTwoOfUser" placeholder="Enter Address" value="" maxlength="256">
                                             </div>
                                         </div>
+                                        <div class="col-xl-6">
+                                            <label><span class="text-dark">Phone Number</span>(Optional)</label>
+                                            <div class="input-group">
+                                                <div class="input-group-append">
+                                                    <span class="input-group-text"><i class="fas fa-phone-volume"></i></span>
+                                                  </div>
+                                                <input type="text" formControlName="phone" class="form-control" autocomplete="off" placeholder="Enter Phone Number" name="phoneNumberOfUser"maxlength="64">
+                                            </div>
+                                            <div *ngIf="phone.invalid && (phone.dirty || phone.touched)">
+                                                <div class="text-danger" *ngIf="phone.errors.pattern">
+                                                    Incorrect format for Phone Number.
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>   
                                     <div class="row">
                                         <div class="col-xl-4">
                                             <div class="form-group">
-                                                <label>City</label>
-                                                <select name="city" formControlName="city" class="form-control bg-white border">
-                                                    <option value="NewYark">New York</option>
-                                                    <option value="Afghanistan">Afghanistan</option>
-                                                </select>
-                                                    
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-4">
-                                            <div class="form-group">
                                                 <label>State</label>
                                                 <select name="state" formControlName="state" class="form-control bg-white border">
-                                                    <option value="NewYark">New York</option>
-                                                    <option value="Afghanistan">Afghanistan</option>
+                                                    <option value="Alabama">Alabama - AL</option><option value="Alaska">Alaska - AK</option><option value="Arizona">Arizona - AZ</option><option value="Arkansas">Arkansas - AR</option><option value="California">California - CA</option><option value="Colorado">Colorado - CO</option><option value="Connecticut">Connecticut - CT</option><option value="Delaware">Delaware - DE</option><option value="District of Columbia">District of Columbia - DC</option><option value="Florida">Florida - FL</option><option value="Georgia">Georgia - GA</option><option value="Hawaii">Hawaii - HI</option><option value="Idaho">Idaho - ID</option><option value="Illinois">Illinois - IL</option><option value="Indiana">Indiana - IN</option><option value="Iowa">Iowa - IA</option><option value="Kansas">Kansas - KS</option><option value="Kentucky">Kentucky - KY</option><option value="Louisiana">Louisiana - LA</option><option value="Maine">Maine - ME</option><option value="Maryland">Maryland - MD</option><option value="Massachusetts">Massachusetts - MA</option><option value="Michigan">Michigan - MI</option><option value="Minnesota">Minnesota - MN</option><option value="Mississippi">Mississippi - MS</option><option value="Missouri">Missouri - MO</option><option value="Montana">Montana - MT</option><option value="Nebraska">Nebraska - NE</option><option value="Nevada">Nevada - NV</option><option value="New Hampshire">New Hampshire - NH</option><option value="New Jersey">New Jersey - NJ</option><option value="New Mexico">New Mexico - NM</option><option value="New York">New York - NY</option><option value="North Carolina">North Carolina - NC</option><option value="North Dakota">North Dakota - ND</option><option value="Ohio">Ohio - OH</option><option value="Oklahoma">Oklahoma - OK</option><option value="Oregon">Oregon - OR</option><option value="Pennsylvania">Pennsylvania - PA</option><option value="Puerto Rico">Puerto Rico - PR</option><option value="Rhode Island">Rhode Island - RI</option><option value="South Carolina">South Carolina - SC</option><option value="South Dakota">South Dakota - SD</option><option value="Tennessee">Tennessee - TN</option><option value="Texas">Texas - TX</option><option value="Utah">Utah - UT</option><option value="Vermont">Vermont - VT</option><option value="Virginia">Virginia - VA</option><option value="Virgin Islands">Virgin Islands - VI</option><option value="Washington">Washington - WA</option><option value="West Virginia">West Virginia - WV</option><option value="Wisconsin">Wisconsin - WI</option><option value="Wyoming">Wyoming - WY</option>
                                                 </select>    
                                             </div>
                                         </div>
                                         <div class="col-xl-4">
                                             <div class="form-group">
+                                                <label>City</label>
+                                                <input type="text" formControlName="city" class="form-control" autocomplete="off" name="city" placeholder="Enter city name" value=""required maxlength="64">    
+                                                    <div *ngIf="city.invalid && (city.dirty || city.touched)">
+                                                        <div class="text-danger" *ngIf="city.errors.required">
+                                                            City Name is required.
+                                                        </div>
+                                                    </div>
+                                             </div>
+                                        </div>
+                                        <div class="col-xl-4">
+                                            <div class="form-group">
                                                 <label>ZipCode</label>
-                                                <input type="text" formControlName="zipCode" class="form-control" autocomplete="off" name="zipCodeOfUser" placeholder="Enter ZipCode" value="" required required maxlength="64">                                                
+                                                <input type="text" formControlName="zipCode" class="form-control" autocomplete="off" name="zipCodeOfUser" placeholder="Enter ZipCode" value=""required maxlength="64">                                                
                                                 <div *ngIf="zipCode.invalid && (zipCode.dirty || zipCode.touched)">
                                                     <div class="text-danger" *ngIf="zipCode.errors.required">
                                                         ZipCode is required.
+                                                    </div>
+                                                    <div class="text-danger" *ngIf="zipCode.errors.pattern">
+                                                        Incorrect Format for ZipCode.
                                                     </div>
                                                 </div>
                                             </div>
