--- a/angular/src/app/admin/settings/host-settings.component.html
+++ b/angular/src/app/admin/settings/host-settings.component.html
@@ -30,7 +30,7 @@
                                     defaultTimezoneScope="{{defaultTimezoneScope}}"></timezone-combo>
                             </div>
                         </tab>
-                        <div *ngIf="false">
+                        <div *ngIf="true">
                             <tab heading="{{'TenantManagement' | localize}}" *ngIf="hostSettings.tenantManagement">
                                 <div class="kt-form">
                                     <h5>{{"FormBasedRegistration" | localize}}</h5>
