Design Show Delete UI

--- a/angular/src/app/main/checklist/checklist.component.css
+++ b/angular/src/app/main/checklist/checklist.component.css
@@ -496,6 +496,19 @@ form.task-report-form select {
     left: 0;
     top: 0;
 }
+.dropdown-toggle{
+    cursor: pointer !important;
+}
+.dropdown-toggle .dropdown-menu{
+    width: 50px;
+    cursor: pointer;
+}
+.dropdown-menu :hover{
+    background-color: white !important;
+}
+.dropdown-menu :focus{
+    background-color: white !important;
+}
 span.assignee-image {
     width: 40px;
     height: 40px;
@@ -653,6 +666,9 @@ table.table.record-table td, table.table.record-table th {
     .record-table th, .record-table td{
         padding: 10px;
     }
+    .delete-cell{
+        width:30px;
+    }
 }
 
 @media only screen and (max-width:1470px){
@@ -668,6 +684,9 @@ table.table.record-table td, table.table.record-table th {
     }
     .assignee-cell{
         width: 200px;
+    }
+    .delete-cell{
+        width:30px;
     }
 }
 @media only screen and (max-width:1366px){
@@ -690,7 +709,9 @@ table.table.record-table td, table.table.record-table th {
         cursor: pointer;
         width: 120px;
     }
-    
+    .delete-cell{
+        width:30px;
+    }
     .toggle-btn-cell .taggle-btn{
         display: block;
     }
@@ -727,6 +748,9 @@ table.table.record-table td, table.table.record-table th {
     }
     .status-cell-item{
         display: flex;
+    }
+    .delete-cell{
+        width:30px;
     }
 }
 
