--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -363,6 +363,19 @@
                                             <th class="action-cell" scope="col">
                                                 {{"Action" | localize}}
                                             </th>
+                                            <th class="delete-cell">
+                                                <div class="dropdown-toggle"
+                                                data-toggle="dropdown" aria-haspopup="true" scope="col">
+                                                    <i class="fas fa-list-ul"></i></div>
+                                                <div class="dropdown-menu">
+                                                    <div  class="dropdown-item">
+                                                        Show Deleted <label class="kt-checkbox kt-checkbox--bold ml-5 kt-checkbox--brand">
+                                                            <input  type="checkbox">
+                                                            <span></span>
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                            </th>
                                             <th class="cell-none">
                                                 <!-- <div (click)="collapsibleRowClick(j.id)" class="taggle-btn"></div> -->
                                             </th>
