--- a/angular/src/app/main/checklist/checklist.component.html
+++ b/angular/src/app/main/checklist/checklist.component.html
@@ -180,6 +180,19 @@
                                                 {{"Assignee" | localize}}
                                                 <p-sortIcon field="AssigneeId"></p-sortIcon>
                                             </th>
+                                            <th class="delete-cell">
+                                                <div class="dropdown-toggle"
+                                                data-toggle="dropdown" aria-haspopup="true" scope="col">
+                                                    <i class="fas fa-list-ul"></i></div>
+                                                <div class="dropdown-menu">
+                                                    <div  class="dropdown-item">
+                                                        Show Deleted <label class="kt-checkbox kt-checkbox--bold ml-5 kt-checkbox--brand">
+                                                            <input  type="checkbox">
+                                                            <span></span>
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                            </th>
                                             <th class="cell-none">
                                             </th>
                                         </tr>
@@ -246,6 +259,7 @@
                                                     userId={{j.assigneeId}}></app-user-list-component>
                                             </div>
                                         </td>
+                                        <td class="delete-cell"></td>
                                         <td class="toggle-btn-cell">
                                             <div (click)="collapsibleRowClick(j.id)" class="taggle-btn"></div>
                                         </td>
@@ -313,6 +327,7 @@
                                 {{'NoData' | localize}}
                             </div>
                         </div>
+                        
                         <div class="pagination-block">
                             <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
                                 (onPageChange)="getClosingCheckListAllTasks($event)"
