--- a/angular/src/app/main/reports/task-report/task-report.component.css
+++ b/angular/src/app/main/reports/task-report/task-report.component.css
@@ -278,7 +278,8 @@ form.search-form .form-group{
 }
 form.search-form .form-group::after{
     content: "";
-    background:center center/cover url(./../../../assets/img/search.png); 
+    background:center center/cover url(./../../../../assets/img/search.png); 
+
   width: 16px;
   height: 16px;
   position: absolute;
